# cp-library

./: .gitignore  Cargo.toml  README.md  pre-commit  rust.code-snippet  rust.code-snippets  rust.json
cp-library-py/: README.md  pyproject.toml
cp-library-py/cp_library_py/: lazy_segment_tree.py  segment_tree.py  union_find.py
cp-library-py/docs/: conf.py  index.rst  requirements.txt
cp-library-py/docs/docs/source/: cp_library_py.rst  lazy_segment_tree.rst  modules.rst  segment_tree.rst  union_find.rst
cp-library-py/lib/data_structure/: lazy_segment_tree.py  segment_tree.py  weighted_union_find.py
cp-library-py/lib/geometry/: vec2.py
cp-library-py/lib/graph/: euler_tour.py  sccd.py
cp-library-py/lib/number_theory/: combination.py
cp-library-py/lib/string/: rolling_hash.py
cp-library-py/src/cp_library_py/: __init__.py  lazy_segment_tree.py
cp-library-py/tests/: test_lazy_segment_tree.py  test_segment_tree.py  test_union_find.py
cp-library-py/tests/data_structure/: test_lazy_segment_tree.py  test_segment_tree.py  test_union_find.py  test_weighted_union_find.py
cp-library-py/tests/geometry/: test_vec2.py
cp-library-py/tests/graph/: test_euler_tour.py  test_sccd.py
cp-library-py/tests/number_theory/: test_combination.py
cp-library-py/tests/string/: test_rolling_hash.py
cp-library-rs/: Cargo.toml  rust-toolchain.toml
cp-library-rs/docs/: TODO.md  dynamic_lazy_segment_tree.md  lazy_segment_tree_binary_search.md
cp-library-rs/src/: affine1d.rs  bit.rs  bit_2d.rs  centroid.rs  cfor.rs  chmax.rs  chmin.rs  crt.rs  debug.rs  debug2D.rs  dijkstra.rs  dynamic_segment_tree.rs  euler_tour.rs  extmonoid.rs  extmonoid_mod.rs  ford_fulkerson.rs  get.rs  in_ex.rs  indexedset.rs  iterutil.rs  lazy_segment_tree.rs  lib.rs  loop_detection_fold.rs  macro_cfor.rs  macro_chmax.rs  macro_debug.rs  macro_debug2D.rs  macro_get.rs  matrix_exp.rs  miller_rabin_test.rs  modint.rs  modint_traits.rs  monoid.rs  monoid_examples.rs  monoid_mod.rs  multiset.rs  pollard_rho_algorithm.rs  rerooting.rs  rollback_unionfind.rs  rolling_hash.rs  (+9 more)
cp-library-rs/src/algebraic_structure/: abel.rs  actedmonoid.rs  actedmonoid_len.rs  actedmonoid_mod.rs  actedmonoid_with_size.rs  affine1d.rs  affine2d.rs  commutative.rs  extmonoid.rs  extmonoid_mod.rs  group.rs  indexed.rs  indexed_monoid.rs  k_best.rs  mod.rs  monoid.rs  monoid_examples.rs  monoid_mod.rs  monoid_mut.rs  monoid_with_context.rs  operation.rs  ordered_monoid.rs  semilattice.rs  to_acted.rs
cp-library-rs/src/convolution/: mod.rs  ntt.rs
cp-library-rs/src/data_structure/: acc2d.rs  acc2d_cyclic.rs  acc3d.rs  balanced_binary_tree.rs  bbt_aa.rs  bbt_treap.rs  bit.rs  bit_2d.rs  bitset.rs  cartesian_tree.rs  dual_segment_tree.rs  dynamic_segment_tree.rs  dynamic_segment_tree_2d.rs  implicit_treap.rs  indexedset.rs  lazy_segment_tree.rs  mex_set.rs  mod.rs  multiset.rs  multiset_splay_tree.rs  rollback_unionfind.rs  segment_tree.rs  segment_tree_2d.rs  segment_tree_ctx.rs  segment_tree_mut.rs  segment_tree_mutable.rs  segmented_sieve.rs  sparse_table.rs  splay_tree.rs  trie.rs  union_find.rs  union_find_monoid.rs  weighted_union_find.rs
cp-library-rs/src/geometry/: arg.rs  basic.rs  mod.rs  vec2.rs
cp-library-rs/src/graph/: bellman_ford.rs  centroid.rs  dijkstra.rs  dynamic_rerooting.rs  euler_tour.rs  ford_fulkerson.rs  hld.rs  lca_doubling.rs  loop_detection.rs  loop_detection_fold.rs  mod.rs  rerooting.rs  rerooting2.rs  scc.rs  simple_graph.rs
cp-library-rs/src/linear_algrebra/: dynamic_matrix_exp.rs  matrix_exp.rs  mod.rs
cp-library-rs/src/number_theory/: comb.rs  comb_no_mod.rs  crt.rs  dynamic_modint.rs  ext_euclid.rs  factorize.rs  factorize_fast.rs  factorize_query.rs  factors_all.rs  frac.rs  miller_rabin_test.rs  mod.rs  modint.rs  modint_comb.rs  modint_for_rollinghash.rs  num_traits.rs  pollard_rho_algorithm.rs  powmod.rs
cp-library-rs/src/string/: consts.rs  lcs.rs  mod.rs  rolling_hash.rs  suffix_array.rs  z.rs
cp-library-rs/src/tree/: aa_tree.rs  arena.rs  bbt_treap.rs  implicit_treap.rs  mod.rs  splay_tree.rs  trie.rs
cp-library-rs/src/utils/: boolutil.rs  consts.rs  coordinate_compression.rs  enum_comb.rs  enum_pairs.rs  grid.rs  index_isize.rs  iterutil.rs  lineartime_merging.rs  mod.rs  num_traits.rs  ord_float.rs  palindrome.rs  run_length.rs  show_binary_tree.rs  usize_pow.rs  yesno.rs
cp-library-rs/tests/: test_acc2d.rs  test_acc2d_cyclic.rs  test_acc3d.rs  test_affine.rs  test_arg.rs  test_balanced_binary_tree.rs  test_bbt_aa.rs  test_bbt_treap.rs  test_bellman_ford.rs  test_bit.rs  test_bit_2d.rs  test_bitset.rs  test_boolutil.rs  test_cartesian_tree.rs  test_chmax.rs  test_chmin.rs  test_comb.rs  test_comb_no_mod.rs  test_coordinate_compression.rs  test_crt.rs  test_dijkstra.rs  test_dual_segment_tree.rs  test_dynamic_matrix_exp.rs  test_dynamic_modint.rs  test_dynamic_rerooting.rs  test_dynamic_segment_tree.rs  test_dynamic_segment_tree_2d.rs  test_enum_comb.rs  test_enum_pairs.rs  test_euler_tour.rs  test_factorize.rs  test_factorize_fast.rs  test_factorize_query.rs  test_factors_all.rs  test_ford_fulkerson.rs  test_frac.rs  test_geometry.rs  test_grid.rs  test_implicit_treap.rs  test_index_isize.rs  (+46 more)
expander/: Cargo.toml
expander/docs/: expand-git-crate-plan.md
expander/src/: cargo_lock.rs  expander.rs  lib.rs  main.rs  module_path.rs  parser.rs  utils.rs
expander/tests/: test_expand.rs  test_module_path.rs
library-checker/: Cargo.toml  README.md  compete.toml  out  requirements.txt  test.py
library-checker/testcases/: .gitignore  bipartitematching.yml  double_ended_priority_queue.yml  lca.yml  matrix_product.yml  pow_of_matrix.yml  range_set_range_composite.yml  static_range_sum.yml  tree_diameter.yml  tree_path_composite_sum.yml  vertex_add_path_sum.yml  vertex_add_subtree_sum.yml  vertex_set_path_composite.yml
pages/: index.html
src/: AffineTransform.rs  BIT.rs  BinarySearch4BTreeSet.rs  BinarySearch4slice.rs  Comb.rs  ConstFact.rs  CoordinateCompression.rs  Factors.rs  Grid.rs  LCA.rs  LCS.rs  LazySegmentTree.rs  MatrixExp.rs  MillerRabinTest.rs  MultiSet.rs  Namori.rs  (+94 more)
(+73 files in other folders)
