[package]
name = "cp-library-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-traits = "0.2.17"
rand = "0.8.5"
rustc-hash = "1.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
