[project]
name = "cp-library-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kentakom1213", email = "kentakom1213@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
