[package]
name = "cp-library-rs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
num = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.17"
rand = "0.8.5"
rustc-hash = "1.1"

[dev-dependencies]
rstest = "0.23.0"
