[package]
name = "cp-library-rs"
version = "0.3.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "=0.14.0"
itertools-num = "=0.1.3"
num = "=0.4.3"
num-bigint = "=0.4.6"
num-complex = "=0.4.6"
num-integer = "=0.1.46"
num-iter = "=0.1.45"
num-rational = "=0.4.2"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
rand = "=0.9.2"
rand_xorshift = "=0.4.0"
rustc-hash = "=2.1.1"

[dev-dependencies]
rstest = "0.23.0"
