[package]
name = "expander"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
itertools = "0.13.0"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
env_logger = "0.11.3"
syn = { version = "2.0.66", features = ["full", "visit"] }
quote = "1.0.36"
anyhow = "1.0.89"
