[package]
name = "library-checker"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
aplusb = { problem = "https://judge.yosupo.jp/problem/aplusb" }
unionfind = { problem = "https://judge.yosupo.jp/problem/unionfind" }
point_add_range_sum = { problem = "https://judge.yosupo.jp/problem/point_add_range_sum"}
point_set_range_composite = { problem = "https://judge.yosupo.jp/problem/point_set_range_composite"}
associative_array = { problem = "https://judge.yosupo.jp/problem/associative_array"}
predecessor_problem = { problem = "https://judge.yosupo.jp/problem/predecessor_problem"}
range_affine_point_get = { problem = "https://judge.yosupo.jp/problem/range_affine_point_get"}
shortest_path = { problem = "https://judge.yosupo.jp/problem/shortest_path"}
staticrmq = { problem = "https://judge.yosupo.jp/problem/staticrmq"}
range_affine_range_sum = { problem = "https://judge.yosupo.jp/problem/range_affine_range_sum"}
range_set_range_composite = { problem = "https://judge.yosupo.jp/problem/range_set_range_composite"}
bipartitematching = { problem = "https://judge.yosupo.jp/problem/bipartitematching"}
suffixarray = { problem = "https://judge.yosupo.jp/problem/suffixarray"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "0.4.5", features = ["derive"] }
cp-library-rs = { path = "../cp-library-rs" }
